--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: actions/hello-world-composite-action@v1
+        uses: actions/use-composite-action@main
         with:
           who-to-greet: 'Mona the Octocat'
 
