--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,5 +23,5 @@ jobs:
       - id: foo
         uses: PankaHolariya/test-composite-action@main
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'This is DevOps'
 
